[package]
name = "tokio_freeze_bug"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
iroh-quinn = { path = "../quinn", features = ["rustls-ring"] }
iroh-quinn-proto = { path = "../quinn-proto" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "time", "macros"] }
rustls = { workspace = true }
rcgen = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
